tests/fixtures/negative/illegal_asm_placement.wrela
// expect: SEM0012: asm methods are only allowed on edge-capability declarations
module negative.illegal_asm_placement

class Plain {
    value: U64

    asm fn bad(self) {
        hlt
        ret
    }
}

image Bad {
    transitions { delegated_hardware -> owned_hardware }

    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware {
        return hardware.exit_to_owned_hardware()
    }

    phase owned_hardware(hardware: OwnedHardware) -> never {
        while true {}
    }
}
